--- a/src/components/topbar/style.less
+++ b/src/components/topbar/style.less
@@ -1,3 +1,21 @@
+// Copyright 2018 Superblocks AB
+//
+// This file is part of Superblocks Lab.
+//
+// Superblocks Lab is free software: you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation version 3 of the License.
+//
+// Superblocks Lab is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+//
+// You should have received a copy of the GNU General Public License
+// along with Superblocks Lab.  If not, see <http://www.gnu.org/licenses/>.
+
+@import '../../style/index';
+
 .topbar {
     position: relative;
     user-select: none;
@@ -141,7 +159,7 @@
                             font-size: 14px;
                             border-radius: 3px;
                             &:hover {
-                                background: #f4f4f4;
+                                background: @white-color-hover;
                             }
                             .projSwitcherRow {
                                 padding: 0 16px;
@@ -216,7 +234,7 @@
             >li {
                 padding: 2px 24px;
                 &:hover {
-                    background: #f4f4f4;
+                    background: @white-color-hover;
                 }
             }
         }
